# offside_detector

./: .env.sample  .gitignore  pyproject.toml
app/ai/: ai_model.py  dataset.py  dataset_loader.py  facade.py  main.py  main_2.py  transforms.py
app/offside/: apps.py  models.py  urls.py  views.py
app/offside/migrations/: 0001_initial.py  0002_rename_offside_perc_prediction_offside_prob_and_more.py
app/offside/static/: styles.css
app/offside/templates/: history.html  index.html  layout.html  prediction.html
app/offside/templatetags/: custom_filters.py
app/soccer/: asgi.py  settings.py  urls.py  wsgi.py
